20111028 - first full-featured version