@@ -1,14 +1,17 @@
 Changes
+Changes.bak
 LICENSE
 MANIFEST
 META.yml
 Makefile.PL
 README
-README.mkdn
+README.bak
 lib/RDF/NS.pm
+lib/RDF/NS.pm.bak
 lib/RDF/NS/Trine.pm
+lib/RDF/NS/Trine.pm.bak
 share/20111028.txt
+share/20111031.txt
 t/compile.t
 t/namespaces.t
 t/trine.t
-tmp.txt
