@@ -1,9 +1,6 @@
 use strict;
 use warnings;
 package RDF::NS::Trine;
-BEGIN {
-  $RDF::NS::Trine::VERSION = '20111031';
-}
 #ABSTRACT: Popular RDF namespace prefixes from prefix.cc as RDF::Trine nodes
 
 use RDF::Trine::Node::Resource;
@@ -15,18 +12,6 @@ sub GET {
 }
 
 1;
-
-
-__END__
-=pod
-
-=head1 NAME
-
-RDF::NS::Trine - Popular RDF namespace prefixes from prefix.cc as RDF::Trine nodes
-
-=head1 VERSION
-
-version 20111031
 
 =head1 SYNOPSIS
 
@@ -46,16 +31,4 @@ returns no plain string URIs but instances of L<RDF::Trine::Node::Resource>.
 Before using this module, make sure to install L<RDF::Trine>, which is not
 automatically installed together with L<RDF::NS>!
 
-=head1 AUTHOR
-
-Jakob Voss
-
-=head1 COPYRIGHT AND LICENSE
-
-This software is copyright (c) 2011 by Jakob Voss.
-
-This is free software; you can redistribute it and/or modify it under
-the same terms as the Perl 5 programming language system itself.
-
 =cut
-
