@@ -122,6 +122,7 @@ cycann	http://sw.cyc.com/CycAnnotations_v1#
 d2rq	http://www.wiwiss.fu-berlin.de/suhl/bizer/D2RQ/0.1#
 dady	http://purl.org/NET/dady#
 daia	http://purl.org/ontology/daia/
+daiaserv	http://purl.org/ontology/daia/service/
 dailymed	http://www4.wiwiss.fu-berlin.de/dailymed/resource/dailymed/
 daml	http://www.daml.org/2001/03/daml+oil#
 dawgt	http://www.w3.org/2001/sw/DataAccess/tests/test-dawg#
@@ -213,6 +214,7 @@ fresnel	http://www.w3.org/2004/09/fresnel#
 frir	http://purl.org/twc/ontology/frir.owl#
 game	http://data.totl.net/game/
 gazetteer	http://data.ordnancesurvey.co.uk/ontology/50kGazetteer/
+gbv	http://purl.org/ontology/gbv/
 gc	http://www.oegov.org/core/owl/gc#
 gd	http://rdf.data-vocabulary.org/#
 gelo	http://krauthammerlab.med.yale.edu/ontologies/gelo#
@@ -453,6 +455,7 @@ psych	http://purl.org/vocab/psychometric-profile/
 pto	http://www.productontology.org/id/
 ptr	http://www.w3.org/2009/pointers#
 puc	http://purl.org/NET/puc#
+puelia	http://kwijibo.talis.com/vocabs/puelia#
 push	http://www.w3.org/2007/uwa/context/push.owl#
 qb	http://purl.org/linked-data/cube#
 qdoslf	http://foaf.qdos.com/lastfm/schema/
@@ -462,6 +465,7 @@ qudt	http://qudt.org/1.1/schema/qudt#
 r2r	http://www4.wiwiss.fu-berlin.de/bizer/r2r/
 rail	http://ontologi.es/rail/vocab#
 rdacarrier	http://rdvocab.info/termList/RDACarrierType/
+rdacontent	http://rdvocab.info/termList/RDAContentType/
 rdamedia	http://rdvocab.info/termList/RDAMediaType/
 rdb	http://www.dbs.cs.uni-duesseldorf.de/RDF/relational#
 rdf	http://www.w3.org/1999/02/22-rdf-syntax-ns#
@@ -640,6 +644,7 @@ vote	http://www.rdfabout.com/rdf/schema/vote/
 vs	http://www.w3.org/2003/06/sw-vocab-status/ns#
 vso	http://purl.org/vso/ns#
 vsto	http://escience.rpi.edu/ontology/vsto/2/0/vsto.owl#
+vvo	http://purl.org/vvo/ns#
 w3con	http://www.w3.org/2000/10/swap/pim/contact#
 w3p	http://prov4j.org/w3p/
 wai	http://purl.org/wai#
