@@ -1,1 +1,3 @@
-20111028 - first full-featured version
+20111031 (701 prefixes) : first release at CPAN
+  added: daiaserv,vvo
+20111028 : first full-featured version
